--- a/gui/src/main/resources/io/github/manamiproject/manami/gui/views/NewEntryView.fxml
+++ b/gui/src/main/resources/io/github/manamiproject/manami/gui/views/NewEntryView.fxml
@@ -43,9 +43,6 @@
             <Insets left="30.0" right="30.0"/>
           </BorderPane.margin>
           <Label text="Title:" GridPane.columnIndex="0" GridPane.rowIndex="0">
-            <font>
-              <Font size="11.0"/>
-            </font>
           </Label>
           <GridPane GridPane.columnIndex="2" GridPane.rowIndex="1">
             <columnConstraints>
@@ -99,10 +96,10 @@
                        GridPane.columnIndex="0" GridPane.rowIndex="0"/>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1"
                   GridPane.rowIndex="0">
-              <Button id="btnUp" fx:id="btnTypeUp" cancelButton="false" disable="true" font="$x1"
+              <Button id="btnTypeUp" fx:id="btnTypeUp" cancelButton="false" disable="false" font="$x1"
                       mnemonicParsing="false" onAction="#typeUp" text="▲" wrapText="false"/>
-              <Button id="btnEpisodeDown" fx:id="btnTypeDown" font="$x1" mnemonicParsing="false"
-                      onAction="#typeDown" text="▼"/>
+              <Button id="btnTypeDown" fx:id="btnTypeDown" font="$x1" mnemonicParsing="true"
+                      onAction="#typeDown" text="▼" disable="true"/>
             </VBox>
           </GridPane>
           <Label text="Type:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
