--- a/gui/src/main/resources/io/github/manamiproject/manami/gui/views/NewEntryView.fxml
+++ b/gui/src/main/resources/io/github/manamiproject/manami/gui/views/NewEntryView.fxml
@@ -92,7 +92,7 @@
             <rowConstraints>
               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
-            <TextField fx:id="txtType" disable="true" editable="false" prefWidth="-1.0" text=""
+            <TextField fx:id="txtType" editable="false" prefWidth="-1.0" text=""
                        GridPane.columnIndex="0" GridPane.rowIndex="0"/>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1"
                   GridPane.rowIndex="0">
@@ -109,7 +109,7 @@
                      GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
           <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
             <TextField fx:id="txtLocation" promptText="Location on your hdd" GridPane.columnIndex="1"
-                       GridPane.columnSpan="2" GridPane.rowIndex="3" HBox.hgrow="ALWAYS"/>
+                       GridPane.columnSpan="2" GridPane.rowIndex="3" HBox.hgrow="ALWAYS" editable="false"/>
             <Button fx:id="btnBrowse" mnemonicParsing="false" onAction="#browse" text="Browse">
               <HBox.margin>
                 <Insets left="5.0"/>
