--- a/gui/src/main/resources/io/github/manamiproject/manami/gui/views/MainView.fxml
+++ b/gui/src/main/resources/io/github/manamiproject/manami/gui/views/MainView.fxml
@@ -11,33 +11,6 @@
        <TabPane fx:id="tabPane" prefHeight="376.0" prefWidth="600.0"
          tabClosingPolicy="ALL_TABS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
-         <Tab fx:id="tabAnimeList" closable="false" text="Anime List">
-           <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-             prefWidth="200.0">
-             <TableView id="animeListTableView" fx:id="tvAnimeList" editable="true"
-               prefHeight="342.0" prefWidth="600.0" tableMenuButtonVisible="true"
-               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="7.0">
-               <columns>
-                 <TableColumn fx:id="colAnimeListNumber" editable="false" prefWidth="50.0"
-                   sortable="false" text="#"/>
-                 <TableColumn fx:id="colAnimeListTitle" prefWidth="290.0" text="Title"/>
-                 <TableColumn fx:id="colAnimeListType" prefWidth="60.0" text="Type"/>
-                 <TableColumn fx:id="colAnimeListEpisodes" prefWidth="60.0" text="Episodes"/>
-                 <TableColumn fx:id="colAnimeListLink" prefWidth="300.0" text="Link"/>
-                 <TableColumn fx:id="colAnimeListLocation" prefWidth="250.0" text="Location"/>
-               </columns>
-               <contextMenu>
-                 <ContextMenu>
-                   <items>
-                     <MenuItem fx:id="cmiDeleteEntry" disable="true" mnemonicParsing="false"
-                       onAction="#deleteEntry" text="Delete"/>
-                   </items>
-                 </ContextMenu>
-               </contextMenu>
-             </TableView>
-           </AnchorPane>
-         </Tab>
        </TabPane>
        <HBox layoutX="233.0" layoutY="3.0" AnchorPane.rightAnchor="50.0">
          <TextField fx:id="txtSearchString" prefHeight="22.0" prefWidth="202.0">
@@ -107,6 +80,14 @@
            </accelerator>
          </MenuItem>
          <SeparatorMenuItem mnemonicParsing="false"/>
+         <MenuItem fx:id="miCheckList" disable="true" mnemonicParsing="false"
+           onAction="#showCheckListTab" text="Check">
+           <accelerator>
+             <KeyCodeCombination alt="UP" code="DIGIT3" control="DOWN" meta="UP" shift="UP"
+               shortcut="UP"/>
+           </accelerator>
+         </MenuItem>
+         <SeparatorMenuItem mnemonicParsing="false"/>
          <MenuItem fx:id="miExit" mnemonicParsing="false" onAction="#exit" text="Exit"/>
        </Menu>
        <Menu mnemonicParsing="false" text="Edit">
@@ -121,6 +102,25 @@
            text="Redo">
            <accelerator>
              <KeyCodeCombination alt="UP" code="Y" control="DOWN" meta="UP" shift="UP"
+               shortcut="UP"/>
+           </accelerator>
+         </MenuItem>
+       </Menu>
+       <Menu mnemonicParsing="false" text="List">
+         <MenuItem fx:id="miAnimeList" mnemonicParsing="false" onAction="#showAnimeListTab"
+           text="Anime List">
+         </MenuItem>
+         <MenuItem fx:id="miWatchList" mnemonicParsing="false" onAction="#showWatchListTab"
+           text="Watch List">
+           <accelerator>
+             <KeyCodeCombination alt="UP" code="DIGIT5" control="DOWN" meta="UP" shift="UP"
+               shortcut="UP"/>
+           </accelerator>
+         </MenuItem>
+         <MenuItem fx:id="miFilterList" mnemonicParsing="false" onAction="#showFilterTab"
+           text="Filter List">
+           <accelerator>
+             <KeyCodeCombination alt="UP" code="DIGIT4" control="DOWN" meta="UP" shift="UP"
                shortcut="UP"/>
            </accelerator>
          </MenuItem>
@@ -142,29 +142,6 @@
          </MenuItem>
          <MenuItem fx:id="miTagList" mnemonicParsing="false" onAction="#showTagListTab"
            text="by MAL Tags"/>
-       </Menu>
-       <Menu mnemonicParsing="false" text="List">
-         <MenuItem fx:id="miCheckList" disable="true" mnemonicParsing="false"
-           onAction="#showCheckListTab" text="Check List">
-           <accelerator>
-             <KeyCodeCombination alt="UP" code="DIGIT3" control="DOWN" meta="UP" shift="UP"
-               shortcut="UP"/>
-           </accelerator>
-         </MenuItem>
-         <MenuItem fx:id="miFilterList" mnemonicParsing="false" onAction="#showFilterTab"
-           text="Filter List">
-           <accelerator>
-             <KeyCodeCombination alt="UP" code="DIGIT4" control="DOWN" meta="UP" shift="UP"
-               shortcut="UP"/>
-           </accelerator>
-         </MenuItem>
-         <MenuItem fx:id="miWatchList" mnemonicParsing="false" onAction="#showWatchListTab"
-           text="Watch List">
-           <accelerator>
-             <KeyCodeCombination alt="UP" code="DIGIT5" control="DOWN" meta="UP" shift="UP"
-               shortcut="UP"/>
-           </accelerator>
-         </MenuItem>
        </Menu>
        <Menu mnemonicParsing="false" text="Help">
          <MenuItem fx:id="miAbout" mnemonicParsing="false" onAction="#showAbout" text="About">
