--- a/gui/src/main/resources/io/github/manamiproject/manami/gui/views/MainView.fxml
+++ b/gui/src/main/resources/io/github/manamiproject/manami/gui/views/MainView.fxml
@@ -153,7 +153,7 @@
          </MenuItem>
        </Menu>
        <Menu mnemonicParsing="false" text="Cache">
-         <MenuItem fx:id="miInvalidateCache" disable="true" mnemonicParsing="false" onAction="#invalidateCache"
+         <MenuItem fx:id="miInvalidateCache" mnemonicParsing="false" onAction="#invalidateCache"
            text="Clear" />
        </Menu>
        <Menu mnemonicParsing="false" text="Help">
